--- a/css/master.css
+++ b/css/master.css
@@ -91,7 +91,6 @@
   background-color: #141D22;
   border-bottom: 1px solid grey;
   color: #2B3033;
-
 }
 .search_contact .input-group span{
   border-radius: 100px;
@@ -375,4 +374,78 @@ input:hover, input:focus, input:active{
    .mb-2 {
     margin-bottom: 0!important;
   }
+  .left-navbar .navbar-nav li{
+    margin: 0 10px;
+  }
+  .right-navbar .contact{
+    width: 100%;
+    height: 55px;
+    padding: 10px 20px;
+    background-color: #2B3033;
+    display: flex;
+    align-items: center;
+  }
+  .right-navbar .navbar-nav{
+    width: 100%;
+    height: 45px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .right-navbar .navbar-nav li{
+    margin: 0 10px;
+  }
+
+  .contatto_cliccato{
+    color: white;
+    margin-left: 10px;
+  }
+  .fas.fa-phone{
+    font-size: 15px;
+    color: #B1B3B5;
+  }
+  .fa-video{
+    font-size: 15px;
+    color: #B1B3B5;
+  }
+  .fa-search{
+    font-size: 15px;
+    color: #B1B3B5;
+  }
+  .fa-vertical-bar-light::after{
+    content: "\2758";
+    color: #B1B3B5;
+    font-size: 30px;
+  }
+  .fa-chevron-down{
+    font-size: 15px;
+  }
+  .fa-edit{
+    font-size: 15px;
+  }
+  .image_profile{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-color: white;
+    overflow: hidden;
+  }
+  .image_profile img{
+    height: 40px;
+    width: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+  }
+  .contact small{
+    font-size: 12px;
+  }
+
 }
