--- a/css/master.css
+++ b/css/master.css
@@ -2,6 +2,31 @@
   display: flex;
   height: 100vh;
 }
+.name{
+  margin-left: 20px;
+}
+.image_contatto_cliccato{
+  border-radius: 50%;
+  height: 47px;
+  width: 52px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background-color: white;
+  overflow: hidden;
+}
+.image_contatto_cliccato img{
+  height: 55px;
+  width: 55px;
+  position: absolute;
+  margin-right: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
 .image_profile{
   border-radius: 50%;
   height: 40px;
@@ -18,6 +43,7 @@
   height: 55px;
   width: 55px;
   position: absolute;
+  margin-right: 10px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -157,7 +183,7 @@
 
 .contatto_cliccato{
   color: white;
-  margin-left: 10px;
+
 }
 .fas.fa-phone{
   font-size: 20px;
@@ -363,10 +389,37 @@ input:hover, input:focus, input:active{
     height: auto;
   }
 }
+
+
+
+
+
 @media screen and (max-width: 767px){
   #root{
     display: flex;
     flex-direction: column;
+  }
+  .image_contatto_cliccato{
+    border-radius: 50%;
+    height: 42px;
+    width: 52px;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-color: white;
+    overflow: hidden;
+  }
+  .image_contatto_cliccato img{
+    height: 55px;
+    width: 55px;
+    position: absolute;
+    margin-right: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
   }
   .image_profile{
     border-radius: 50%;
@@ -381,8 +434,8 @@ input:hover, input:focus, input:active{
     overflow: hidden;
   }
   .image_profile img{
-    height: 60px;
-    width: 60px;
+    height: 55px;
+    width: 55px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -435,7 +488,7 @@ input:hover, input:focus, input:active{
   }
   .chat_list .contact{
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     padding: 0 10px;
 
   }
@@ -482,7 +535,6 @@ input:hover, input:focus, input:active{
 
   .contatto_cliccato{
     color: white;
-    margin-left: 10px;
   }
   .fas.fa-phone{
     font-size: 15px;
@@ -512,6 +564,7 @@ input:hover, input:focus, input:active{
     display: block;
     width: 100%;
     height: calc(100vh - 285px);
+    max-width: 100%;
     padding: 20px 10%;
     overflow-y: auto;
   }
